--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -3,153 +3,168 @@ body {
 }
 
 header {
-  height: 50px;
-  margin: 0 auto;
-  position: relative;
+	position: relative;
+	height: 50px;
+}
 
-  nav {
-    height: 62px;
-    background-color: #212121;
 
-    .menu {
-      z-index: 555;
-      display: flex;
-      justify-content: space-around;
-      padding-top: 18px;
-      list-style: none;
-      margin: 0 auto;
+nav {
+	position: fixed;
+	width: 100%;
+	height: 50px;
+	background-color: #212121;
+	z-index: 5;
+}
 
-      &_item {
-        font-weight: 300;
-        color: #ffffff;
-        font-size: 15px;
-        margin-bottom: 18px
-      }
 
-      &_link {
-        color: #ffffff;
-        text-decoration: none;
-      }
+.hamburger {
+	display: none;
+}
 
+
+.menu {
+	display: flex;
+	justify-content: space-between;
+	padding: 13px 70px;
+	margin: 0;
+	list-style-type: none;
+	&_link {
+		color: #ffffff;
+		font-size: 15px;
+		font-weight: 300;
+		&:hover {
+			text-decoration: none;
+			color: $blue;
     }
 
   }
+
+	&_item {
+		border-right: 2px dotted black;
+		padding-right: 28px;
+		&:last-child {
+      border-right: none;
+    }
+
+  }
+
 }
+
 
 
 .subheader {
-  z-index: 1;
-  height: 84px;
-  background-color: rgba(0, 0, 0, 0.6);
-  padding: 18px;
   position: absolute;
-  width: 100%;
-}
-
-
-.uber {
-  color: #ffffff;
-  font-size: 26px;
-  font-weight: 400;
-  margin-left: 9px;
-  text-align: left;
-  text-transform: uppercase;
-}
-
-
-.official {
-  opacity: 0.5;
-  color: #ffffff;
-  font-size: 13px;
-  font-weight: 400;
-  margin-left: 9px;
-}
-
-
-.call {
-  color: #ffffff;
-  font-size: 12px;
-  font-style: normal;
-  text-align: right;
-
-  &_numb {
-    font-size: 22px;
-    font-weight: 400;
-    color: #ffffff;
-    text-transform: uppercase;
-    text-decoration: none;
-  }
-}
-
-
-.call_btn {
-  width: 172px;
-  height: 46px;
-  border: 3px solid rgba(0, 0, 0, 0.07);
-  background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
-  border-radius: 3px;
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21);
-  color: #ffffff;
-  font-family: Roboto;
-  font-size: 14px;
-  font-weight: 400;
-  font-style: normal;
-  letter-spacing: normal;
-  text-align: center;
-  text-transform: uppercase;
-
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-
-.first {
-  background: url('../img/back1.jpg') center (center / cover) no-repeat;
-  padding-top: 151px;
-  padding-bottom: 135px;
-  height: 100vh;
-
-  h1,
-  h2 {
-    color: #ffffff;
-    font-size: 36px;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 0 auto;
-  }
-
-  h1 {
-    font-size: 60px;
-  }
-
-  &_text {
-    color: #ffffff;
-    font-weight: 400;
-    font-size: 18px;
-    text-align: center;
-  }
-
-  &_btn {
-    width: 259px;
-    height: 63px;
-    box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12);
-    border: 3px solid rgba(0, 0, 0, 0.07);
-    background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
-    margin: 0 auto;
-    margin-top: 140px;
+	top: 50px;
+	width: 100%;
+	height: 84px;
+	background-color: rgba(0, 0, 0, 0.6);
+	&_logo {
     display: block;
-    color: #ffffff;
-    border-radius: 3px;
+		max-width: 100%;
+		margin-top: 16px;
+  }
+	
+	&_official {
+		margin-top: 6px;
+		opacity: 0.5;
+		color: #ffffff;
+		font-size: 13px;
+		font-weight: 400;
+  }
 
-    &:hover {
-      cursor: pointer;
+	&_call {
+		color: #ffffff;
+		font-size: 12px;
+		font-weight: 300;
+		margin-top: 19px;
+		text-align: right;
+  }
+
+	&_phone {
+		display: block;
+		margin-top: 8px;
+		color: #ffffff;
+		font-size: 22px;
+		font-weight: 400;
+		text-transform: uppercase;
+		text-align: right;
+		line-height: 12px;
+		&:hover {
+			text-decoration: none;
+			color: #fff;
     }
+
+  }
+
+	&_btn {
+		margin-top: 19px;
+		width: 172px;
+		height: 46px;
+		box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12);
+		border: none;
+		border-radius: 4px;
+		background-image: linear-gradient(to top, $blue 0%, #4ce2ff 100%);
+		text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21);
+		color: #ffffff;
+		font-size: 14px;
+		font-weight: 400;
+		text-transform: uppercase;
   }
 
 }
+	
 
+
+.promo {
+	min-height: 100vh;
+	background: url('../img/back1.jpg') center (center / cover) no-repeat;
+	padding: 150px 0 135px 0;
+	&_header {
+		color: #ffffff;
+		font-weight: 700;
+		text-transform: uppercase;
+		font-size: 60px;
+		line-height: 60px;
+		margin: 0;
+		text-align: center;
+  }
+
+	&_subheader {
+		color: #ffffff;
+		font-weight: 700;
+		text-transform: uppercase;
+		font-size: 36px;
+		line-height: 36px;
+		margin: 0;
+		margin-top: 22px;
+		text-align: center;
+  }
+
+	&_descr {
+		color: #ffffff;
+		font-size: 18px;
+		font-weight: 400;
+		line-height: 24px;
+		text-align: center;
+		margin-top: 23px;
+  }
+
+	&_btn {
+		display: block;
+		margin: 118px auto 0 auto;
+		width: 259px;
+		height: 63px;
+		box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12);
+		border: none;
+		border-radius: 4px;
+		background-image: linear-gradient(to top, $blue 0%, #4ce2ff 100%);
+		text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21);
+		color: #ffffff;
+		font-size: 18px;
+		font-weight: 400;
+		text-transform: uppercase;
+  }
+}
 
 .lable {
   margin: 0 auto;
@@ -598,10 +613,12 @@ footer {
 
 
 .back {
+  z-index: 1000;
   position: fixed;
   right: 10px;
   bottom: 10px;
-
+  background-color: white;
+  border-radius: 100%;
   img {
     width: 50px;
     height: 50px;
