--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -9,11 +9,12 @@
 		}
 	}
 
-	.first {
-		h1 {
+	.promo {
+		&_header {
 			font-size: 50px;
 		}
 	}
+
 
 	.reason {
 		&_item {
@@ -91,33 +92,40 @@
 
 	}
 
-	.subheader { 
 
-		.official {
+	.subheader {
+		&_logo {
+			img {
+				width: 100%;
+			}
+		}
+
+		&_official {
 			font-size: 11px;
 		}
 
-		.call_numb {
+		&_phone {
 			font-size: 18px;
 		}
 
-		.call_btn {
+		&_btn {
 			margin-top: 21px;
 			height: 40px;
 			width: 100%;
 		}
-
 	}
 
-	.first {
-		h1 {
+
+	.promo {
+		&_header {
 			font-size: 40px;
 		}
 
-		h2 {
+		&_subheader {
 			font-size: 30px;
 		}
 	}
+
 
 	.reason {
 		&_item {
@@ -205,6 +213,7 @@
 
 	}
 
+
 	.hamburger {
 		display: block;
 		position: absolute;
@@ -252,7 +261,7 @@
 	}
 
 	.subheader {
-		.call_numb {
+		&_phone {
 			display: block;
 			margin-top: 10px;
 			color: #ffffff;
@@ -262,24 +271,23 @@
 			text-align: center;
 		}
 
-		.call_btn {
+		&_btn {
 			display: block;
 			width: 200px;
 			height: 40px;
 			margin: 0 auto;
 			margin-top: 10px;
 		}
+
 	}
 
-	.first {
-		h1 {
+	.promo {
+		&_header {
 			line-height: 45px;
 		}
-		button {
-			margin: 0 auto;
-			margin-top: 30px;
-		}
+
 	}
+
 
 	.reason {
 		padding: 40px 0;
@@ -337,48 +345,54 @@
 		margin-top: 11px;
 	}
 
+
 	.subheader {
 		height: 60px;
 		top: 30px;
 
-		.official {
+		&_official {
 			display: none;
 		}
 
-		.call_numb {
+		&_logo {
+			margin-top: 16px;
+		}
+
+		&_phone {
 			font-size: 12px;
 			font-weight: 400;
 			text-transform: uppercase;
 			margin-top: 11px;
 		}
 
-		&_phone {
+		&_btn {
 			width: 110px;
 			height: 22px;
-			font-size: 12px;
-			margin: 0;
-			text-align: right;
+			font-size: 9px;
+			margin-top: 6px;
 			&:hover {
 				background-image: linear-gradient(to top, $blue 0%, #4ce2ff 100%);
 			}
 		}
+
 	}
 
-	.first {
-		height: 400px;
-		padding: 150px 0 35px 0;
 
-		&_text {
+	.promo {
+		min-height: 400px;
+		padding: 93px 0 35px 0;
+
+		&_descr {
 			display: none;
 		}
 
-		h1 {
+		&_header {
 			font-size: 30px;
 			padding: 0 24px;
 			line-height: 35px;
 		}
 
-		h2 {
+		&_subheader {
 			font-size: 20px;
 			margin-top: 33px;
 			padding: 0 10px;
@@ -388,13 +402,15 @@
 		&_btn {
 			width: 210px;
 			height: 50px;
-			margin-top: 100px;
+			margin-top: 72px;
 			font-size: 16px;
 
 			&:hover {
 				background-image: linear-gradient(to top, $blue 0%, #4ce2ff 100%);
 			}
+
 		}
+
 	}
 
 	.menu {
@@ -411,6 +427,7 @@
 		}
 
 	}
+
 
 	.hamburger {
 		&_active {
